--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Много боли</title>
+        <title>ARINA BRANCH</title>
     </head>
     <body>
         <div>Тут будет бол nnnhh hhhhhhь</div>
