--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Много боли</title>
+        <title>Group 18</title>
+        <link rel="stylesheet" href="style.css" />
+        <script  type="text/javascript" src="script.js" charset="windows-1251"></script>
     </head>
     <body>
-        <div>Тут будет бол hhhhhhь</div>
-        <div>моя ветка(Денис)</div>
+        <h1>Алгоритмы</h1>
+        <h2>1) A*</h2>
+        <div id="table">
+            Размер карты: 
+            <input type="number" id="size" min="2" max="20"/>
+            <button type="button" id="createTable">создать</button>
+        </div>
+        <h2>2) Кластеризация</h2>
+        <h2>3) Генетический</h2>
     </body>
 </html>
