--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>ARINA BRANCH</title>
-    </head>
-    <body>
-        <div>Тут будет бол nnnhh hhhhhhь</div>
-        <div>testd</div>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <title>Group 18</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <h1>Алгоритмы</h1>
+    <h2><a href="index2.html">1) A*</a></h2>
+    <h2><a href="index3.html">2) Кластеризация</a></h2>
+    <h2><a href="index4.html">3) Генетический</a></h2>
+</body>
 </html>
