--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Алгоритмы</h1>
-    <h2><a href="index2.html">1) A*</a></h2>
-    <h2><a href="index3.html">2) Кластеризация</a></h2>
-    <h2><a href="index4.html">3) Генетический</a></h2>
+    <a class="buttons" href="index2.html">1) A*</a>
+    <a class="buttons" href="index3.html">2) Кластеризация</a>
+    <a class="buttons" href="index4.html">3) Генетический</a>
 </body>
 </html>
