--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>1) A*</h2>
         <div id="table">
             Размер карты: 
-            <input type="number" id="size" min="2" max="20"/>
+            <input type="number" id="size" min="2"/>
             <button type="button" id="createTable">создать</button>
         </div>
         <h2>2) Кластеризация</h2>
