--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
         <meta charset="utf-8" />
         <title>Group 18</title>
         <link rel="stylesheet" href="style.css" />
-        <script  type="text/javascript" src="script.js" charset="windows-1251"></script>
     </head>
     <body>
         <h1>Алгоритмы</h1>
-        <h2>1) A*</h2>
-        <div id="table">
-            Размер карты: 
-            <input type="number" id="size" min="2"/>
-            <button type="button" id="createTable">создать</button>
-        </div>
-        <h2>2) Кластеризация</h2>
-        <h2>3) Генетический</h2>
+        <a class="buttons" href="html/algo_1.html">1) A*</a>
+        <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
+        <a class="buttons" href="html/algo_3.html">3) Генетический</a>
     </body>
 </html>
