--- a/html/algo_1.html
+++ b/html/algo_1.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>A*</title>
         <link rel="stylesheet" href="../style.css" />
-        <script type="text/javascript" src="../js/algo_1.js" charset="windows-1251"></script>
+        <script type="text/javascript" src="../js/algo_1.js"></script>
     </head>
     <body>
         <div id="table">
