--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <title>Кластеризация</title>
     <link rel="stylesheet" href="../style.css" />
+    <script type="text/javascript" src="../js/algo_2.js"></script>
 </head>
 <body>
+    <h1>Кластеризация</h1>
+    <canvas></canvas>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
