--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Много боли</title>
-    </head>
-    <body>
-        <div>Тут будет бол hhhhhhь</div>
-        <div>testd</div>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <title>Тыкалка</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <input id="numberOfClusters" type="number">
+    <button type="submit" id="startButton">Поехали</button>
+    <script type="text/javascript" src="Script1.js"></script>
+</body>
 </html>
