--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <canvas id="canvas" width="500" height="500"></canvas>
     <input id="numberOfClusters" type="number">
     <button type="submit" id="startButton">Поехали</button>
-    <script type="text/javascript" src="Script1.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
