--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Кластеризация</h1>
-    <canvas></canvas>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <input id="numberOfClusters" type="number">
+    <button type="submit" id="startButton">Поехали</button>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
