--- a/html/algo_3.html
+++ b/html/algo_3.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <title>Генетический</title>
     <link rel="stylesheet" href="../style.css" />
+    <script type="text/javascript" src="../js/algo_3.js"></script>
 </head>
 <body>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <button type="submit" id="startButton">Запуск</button>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
