--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -12,6 +12,12 @@
     <canvas id="canvas" width="500" height="500"></canvas>
     <input id="numberOfClusters" type="number">
     <button type="submit" id="startButton">Поехали</button>
+
+    <p>
+        Результат работы алгоритма K-средних: цвет точек<br>
+        Результат работы алгоритма минимального покрывающего дерева: точки, соединённые линиями
+    </p>
+
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
