--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -10,9 +10,12 @@
 <body>
     <h1>Кластеризация</h1>
     <canvas id="canvas" width="500" height="500"></canvas>
+    Введите кол-во кластеров: 
     <input id="numberOfClusters" type="number">
     <button type="submit" id="startButton">Поехали</button>
-
+    <p>
+        Нажмите на область, чтобы нарисовать точку
+    </p>
     <p>
         Результат работы алгоритма K-средних: цвет точек<br>
         Результат работы алгоритма минимального покрывающего дерева: точки, соединённые линиями
