--- a/html/algo_3.html
+++ b/html/algo_3.html
@@ -10,6 +10,9 @@
 <body>
     <canvas id="canvas" width="500" height="500"></canvas>
     <button type="submit" id="startButton">Запуск</button>
+    <p>
+        Нажмите на область, чтобы нарисовать город
+    </p>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
