--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
         <title>Group 18</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body class="main">
         <h1>Алгоритмы</h1>
         <a class="buttons" href="html/algo_1.html">1) A*</a>
         <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
         <a class="buttons" href="html/algo_3.html">3) Генетический</a>
+        <footer>
+            <h3>
+                Создатели: Буйлук Денис, Гавриленко Арина, Сковородникова Людмила
+            </h3>
+        </footer>
     </body>
 </html>
