--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a class="buttons" href="html/algo_1.html">1) A*</a>
         <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
         <a class="buttons" href="html/algo_3.html">3) Генетический</a>
+        <a class="buttons" href="html/algo_6.html">6) Нейронка</a>
         <footer>
             <h3>
                 Создатели: Буйлук Денис, Гавриленко Арина, Сковородникова Людмила
