--- a/html/algo_1.html
+++ b/html/algo_1.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="table">
-            Размер карты:
+            <p>Размер карты:</p>
             <input type="number" id="size" min="2" />
             <button type="button" id="createTable">создать</button>
         </div>
