--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Кластеризация</h1>
     <canvas id="canvas" width="500" height="500"></canvas>
-    Введите кол-во кластеров: 
+    <p>Введите кол-во кластеров:</p> 
     <input id="numberOfClusters" type="number">
     <button type="submit" id="startButton">Поехали</button>
     <p>
