--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Кластеризация</h1>
     <canvas id="canvas" width="500" height="500"></canvas>
-    <p>Введите кол-во кластеров:</p> 
+    <p>Введите кол-во кластеров:</p>
     <input id="numberOfClusters" type="number">
     <button type="submit" id="startButton">Поехали</button>
     <p>
@@ -20,7 +20,9 @@
         Результат работы алгоритма K-средних: цвет точек<br>
         Результат работы алгоритма минимального покрывающего дерева: точки, соединённые линиями
     </p>
-
+    <a class="buttons" href="html/algo_1.html">1) A*</a>
+    <a class="buttons" href="html/algo_3.html">3) Генетический</a>
+    <a class="buttons" href="html/algo_6.html">6) Нейронка</a>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
