--- a/html/algo_1.html
+++ b/html/algo_1.html
@@ -13,9 +13,9 @@
             <input type="number" id="size" min="2" />
             <button type="button" id="createTable">создать</button>
         </div>
-        <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
-        <a class="buttons" href="html/algo_3.html">3) Генетический</a>
-        <a class="buttons" href="html/algo_6.html">6) Нейронка</a>
+        <a class="buttons" href="../html/algo_2.html">2) Кластеризация</a>
+        <a class="buttons" href="../html/algo_3.html">3) Генетический</a>
+        <a class="buttons" href="../html/algo_6.html">6) Нейронка</a>
         <a class="back-button" href="../index.html">Вернуться на главную</a>
     </body>
 </html>
