--- a/html/algo_2.html
+++ b/html/algo_2.html
@@ -20,9 +20,9 @@
         Результат работы алгоритма K-средних: цвет точек<br>
         Результат работы алгоритма минимального покрывающего дерева: точки, соединённые линиями
     </p>
-    <a class="buttons" href="html/algo_1.html">1) A*</a>
-    <a class="buttons" href="html/algo_3.html">3) Генетический</a>
-    <a class="buttons" href="html/algo_6.html">6) Нейронка</a>
+    <a class="buttons" href="../html/algo_1.html">1) A*</a>
+    <a class="buttons" href="../html/algo_3.html">3) Генетический</a>
+    <a class="buttons" href="../html/algo_6.html">6) Нейронка</a>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
