--- a/html/algo_3.html
+++ b/html/algo_3.html
@@ -13,9 +13,9 @@
     <p>
         Нажмите на область, чтобы нарисовать город
     </p>
-    <a class="buttons" href="html/algo_1.html">1) A*</a>
-    <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
-    <a class="buttons" href="html/algo_6.html">6) Нейронка</a>
+    <a class="buttons" href="../html/algo_1.html">1) A*</a>
+    <a class="buttons" href="../html/algo_2.html">2) Кластеризация</a>
+    <a class="buttons" href="../html/algo_6.html">6) Нейронка</a>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
