--- a/html/algo_6.html
+++ b/html/algo_6.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../style.css" />
     <script type="text/javascript" src="../js/algo_6.js"></script>
     <button type="submit" id="submit" onclick="ClearCanvas();">Очистить</button>
-    <a class="buttons" href="html/algo_1.html">1) A*</a>
-    <a class="buttons" href="html/algo_2.html">2) Кластеризация</a>
-    <a class="buttons" href="html/algo_3.html">3) Генетический</a>
+    <a class="buttons" href="../html/algo_1.html">1) A*</a>
+    <a class="buttons" href="../html/algo_2.html">2) Кластеризация</a>
+    <a class="buttons" href="../html/algo_3.html">3) Генетический</a>
     <a class="back-button" href="../index.html">Вернуться на главную</a>
 </body>
 </html>
